// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Node > should render 1`] = `
<div>
  <rk-node
    aria-expanded="false"
    aria-selected="false"
    class=""
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <!---->
       
      <rk-item>
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
      </rk-item>
    </div>
     
    <!---->
  </rk-node>
  
</div>
`;

exports[`Node > should render 2`] = `
<div>
  <rk-node
    aria-expanded="false"
    aria-selected="false"
    class="another-class"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <!---->
       
      <rk-item>
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
      </rk-item>
    </div>
     
    <!---->
  </rk-node>
  
</div>
`;
